<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile_placeholder_copy"
            android:layout_margin="6dp"
            android:contentDescription="@string/profile_placeholder_content_description"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_age"
                    android:layout_marginEnd="3dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <View
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/earth_logo"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_status"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="6dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/like_heart_copy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_number_of_likes"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/like_comment_share_bar"
        android:layout_marginTop="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/grey"/>

</LinearLayout>